# WhitelistCensor-Server

./: .gitignore  INSTRUCTIONS.md  README.md  pyproject.toml
.github/: run_audit.py
.github/workflows/: ci.yml
censor_server/: .env.default  config_example.json  main.py  utils.py  watchdog.py
censor_server/cogs/: websocket_manager.py  whitelist.py
data/: blacklist.json  random_prefixes.json  random_suffixes.json
data/sorted_datasets/: combination_words.json  common_typos.json  culture.json  jargon_and_meta.json  slang_and_memes.json  touhou_characters.json  touhou_locations.json  twitch_emotes.json
